CB-4125 improve file reading